test/conformance/chainsaw/exceptions/exclude-host-ports/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: policy-exception-ns-3
---
apiVersion: v1
kind: Namespace
metadata:
  name: staging-ns-3
