test/conformance/chainsaw/exceptions/exclude-host-ports/pod-allowed-1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod-1
  namespace: default
spec:
  containers:
  - name: nginx1
    image: nginx
    args:
    - sleep
    - 1d
    ports:
    - hostPort: 0
      containerPort: 80
  initContainers:
  - name: nginx2
    image: nginx
    args:
    - sleep
    - 1d
    ports:
    - hostPort: 0
      containerPort: 8080
