test/conformance/chainsaw/exceptions/exclude-host-ports/pod-allowed-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod-2
  namespace: staging-ns-3
spec:
  containers:
  - name: nginx1
    image: nginx
    args:
    - sleep
    - 1d
    ports:
    - hostPort: 10
      containerPort: 80
  initContainers:
  - name: nginx2
    image: nginx
    args:
    - sleep
    - 1d
    ports:
    - hostPort: 20
      containerPort: 80
