test/conformance/chainsaw/exceptions/exclude-host-ports/pod-rejected.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod
  namespace: default
spec:
  containers:
  - name: nginx1
    image: nginx
    args:
    - sleep
    - 1d
    ports:
    - hostPort: 20
      containerPort: 80
  initContainers:
  - name: nginx2
    image: nginx
    args:
    - sleep
    - 1d
    ports:
    - hostPort: 20
      containerPort: 80
