test/conformance/chainsaw/exceptions/exclude-host-ports/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: psa-3
spec:
  background: true
  rules:
  - name: baseline
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      failureAction: Enforce
      podSecurity:
        level: baseline
        version: latest
