test/conformance/chainsaw/exceptions/exclude-host-ports/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: psa-3
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
